--- a/distro.html
+++ b/distro.html
@@ -82,6 +82,28 @@
     <table>
         <tr>
             <td>
+                <div class="product" data-images='["souljaism tee front.png", "souljaism tee back.png"]'>
+                    <img src="souljaism tee front.png" alt="Souljaism Tee" class="product-image" style="width: 100%;">
+                    <span class="arrow left" onclick="prevImage(this)">&#10094;</span>
+                    <span class="arrow right" onclick="nextImage(this)">&#10095;</span>
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">Souljaism Tee</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$29.99</p>
+                        <a target="_blank" href="https://square.link/u/PNaKrNdI" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Buy now</a>
+                    </div>
+                </div>
+            </td>
+            <td>
                 <div class="product" data-images='["distro/iowb tee front.png", "distro/iowb tee back.png"]'>
                     <img src="distro/iowb tee front.png" alt="It's Over/We're Back Tee" class="product-image" style="width: 100%;">
                     <span class="arrow left" onclick="prevImage(this)">&#10094;</span>
@@ -89,7 +111,7 @@
                     <div style="padding: 20px;">
                         <p style="font-size: 18px; line-height: 20px;">It's Over/We're Back Tee</p>
                         <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$29.99</p>
-                        <a target="_blank" href="https://square.link/u/xXqAKQJA?src=embed" style="
+                        <a target="_blank" href="https://square.link/u/xXqAKQJA" style="
                         display: inline-block;
                         font-size: 18px;
                         line-height: 48px;
@@ -111,7 +133,7 @@
                     <div style="padding: 20px;">
                         <p style="font-size: 18px; line-height: 20px;">It's Over/We're Back Pants</p>
                         <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$39.99</p>
-                        <a target="_blank" href="https://square.link/u/YsJqFVbX?src=embed" style="
+                        <a target="_blank" href="https://square.link/u/YsJqFVbX" style="
                         display: inline-block;
                         font-size: 18px;
                         line-height: 48px;
@@ -133,7 +155,7 @@
                     <div style="padding: 20px;">
                         <p style="font-size: 18px; line-height: 20px;">It's Over/We're Back Shorts</p>
                         <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$24.99</p>
-                        <a target="_blank" href="https://square.link/u/Oz6XvMpT?src=embed" style="
+                        <a target="_blank" href="https://square.link/u/Oz6XvMpT" style="
                         display: inline-block;
                         font-size: 18px;
                         line-height: 48px;
