--- a/distro.html
+++ b/distro.html
@@ -82,8 +82,8 @@
     <table>
         <tr>
             <td>
-                <div class="product" data-images='["souljaism tee front.png", "souljaism tee back.png"]'>
-                    <img src="souljaism tee front.png" alt="Souljaism Tee" class="product-image" style="width: 100%;">
+                <div class="product" data-images='["distro/souljaism tee front.png", "distro/souljaism tee back.png"]'>
+                    <img src="distro/souljaism tee front.png" alt="Souljaism Tee" class="product-image" style="width: 100%;">
                     <span class="arrow left" onclick="prevImage(this)">&#10094;</span>
                     <span class="arrow right" onclick="nextImage(this)">&#10095;</span>
                     <div style="padding: 20px;">
