--- a/distro.html
+++ b/distro.html
@@ -82,6 +82,50 @@
     <table>
         <tr>
             <td>
+                <div class="product" data-images='["distro/gb1.png", "distro/gb2.png"]'>
+                    <img src="distro/gb1.png" alt="Gripping Beasts After Maps Tee" class="product-image" style="width: 100%;">
+                    <span class="arrow left" onclick="prevImage(this)">&#10094;</span>
+                    <span class="arrow right" onclick="nextImage(this)">&#10095;</span>
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">Gripping Beasts After Maps Tee</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$29.99</p>
+                        <a target="_blank" href="https://square.link/u/DIQkQTpd" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Buy now</a>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="product" data-images='["distro/gb3.png", "distro/gb4.png"]'>
+                    <img src="distro/gb3.png" alt="Gripping Beasts Wires/Leaves Tee" class="product-image" style="width: 100%;">
+                    <span class="arrow left" onclick="prevImage(this)">&#10094;</span>
+                    <span class="arrow right" onclick="nextImage(this)">&#10095;</span>
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">Gripping Beasts Wires/Leaves Tee</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$29.99</p>
+                        <a target="_blank" href="https://square.link/u/ZCilLbW0" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Buy now</a>
+                    </div>
+                </div>
+            </td>
+            <td>
                 <div class="product" data-images='["distro/souljaism tee front.png", "distro/souljaism tee back.png"]'>
                     <img src="distro/souljaism tee front.png" alt="Souljaism Tee" class="product-image" style="width: 100%;">
                     <span class="arrow left" onclick="prevImage(this)">&#10094;</span>
