--- a/distro.html
+++ b/distro.html
@@ -82,6 +82,88 @@
     <table>
         <tr>
             <td>
+                <div class="product" data-images='["distro/initiation sweater brown.png"]'>
+                    <img src="distro/initiation sweater brown.png" alt="Initiation Sweater" class="product-image" style="width: 100%;">
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">Initiation Sweater</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$49.99</p>
+                        <a target="_blank" href="https://square.link/u/4kZ9Pzre" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Buy now</a>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="product" data-images='["distro/initiation sweater blue.png"]'>
+                    <img src="distro/initiation sweater blue.png" alt="Initiation Sweater" class="product-image" style="width: 100%;">
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">Initiation Sweater</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$49.99</p>
+                        <a target="_blank" href="https://square.link/u/4kZ9Pzre" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Buy now</a>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="product" data-images='["distro/initiation waffle.png"]'>
+                    <img src="distro/initiation waffle.png" alt="Initiation Waffle Tee" class="product-image" style="width: 100%;">
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">Initiation Waffle Tee</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$44.99</p>
+                        <a target="_blank" href="https://square.link/u/hbi6kVoE" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Buy now</a>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="product" data-images='["distro/initiation thermal.png"]'>
+                    <img src="distro/iowb tee front.png" alt="Initiation Thermal" class="product-image" style="width: 100%;">
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">Initiation Thermal</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$44.99</p>
+                        <a target="_blank" href="https://square.link/u/3ibt1sHv" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Buy now</a>
+                    </div>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
                 <div class="product" data-images='["distro/gb1.png", "distro/gb2.png"]'>
                     <img src="distro/gb1.png" alt="Gripping Beasts After Maps Tee" class="product-image" style="width: 100%;">
                     <span class="arrow left" onclick="prevImage(this)">&#10094;</span>
