--- a/distro.html
+++ b/distro.html
@@ -143,7 +143,7 @@
             </td>
             <td>
                 <div class="product" data-images='["distro/initiation thermal.png"]'>
-                    <img src="distro/iowb tee front.png" alt="Initiation Thermal" class="product-image" style="width: 100%;">
+                    <img src="distro/initiation thermal.png" alt="Initiation Thermal" class="product-image" style="width: 100%;">
                     <div style="padding: 20px;">
                         <p style="font-size: 18px; line-height: 20px;">Initiation Thermal</p>
                         <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$44.99</p>
