--- a/distro.html
+++ b/distro.html
@@ -107,7 +107,7 @@
                     <div style="padding: 20px;">
                         <p style="font-size: 18px; line-height: 20px;">Initiation Sweater</p>
                         <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$49.99</p>
-                        <a target="_blank" href="https://square.link/u/4kZ9Pzre" style="
+                        <a target="_blank" href="https://square.link/u/QXgFJC3N" style="
                         display: inline-block;
                         font-size: 18px;
                         line-height: 48px;
