--- a/distro.html
+++ b/distro.html
@@ -82,6 +82,94 @@
     <table>
         <tr>
             <td>
+                <div class="product" data-images='["distro/lula shirt front.png", "distro/lula shirt back.png"]'>
+                    <img src="distro/lula shirt front.png" alt="UCJ12TQRLL Shirt" class="product-image" style="width: 100%;">
+                    <span class="arrow left" onclick="prevImage(this)">&#10094;</span>
+                    <span class="arrow right" onclick="nextImage(this)">&#10095;</span>
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">UCJ12TQRLL Shirt</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$84.99</p>
+                        <a target="_blank" href="https://square.link/u/gJ6LSmoK" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Sold Out</a>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="product" data-images='["distro/qr hiking shirt.png"]'>
+                    <img src="distro/qr hiking shirt.png" alt="QR Hiking Shirt" class="product-image" style="width: 100%;">
+                    <span class="arrow left" onclick="prevImage(this)">&#10094;</span>
+                    <span class="arrow right" onclick="nextImage(this)">&#10095;</span>
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">QR Hiking Shirt</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$39.99</p>
+                        <a target="_blank" href="https://square.link/u/NFiGpBKH" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Buy now</a>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="product" data-images='["distro/bogo salmon.png"]'>
+                    <img src="distro/bogo salmon.png" alt="OBTee" class="product-image" style="width: 100%;">
+                    <span class="arrow left" onclick="prevImage(this)">&#10094;</span>
+                    <span class="arrow right" onclick="nextImage(this)">&#10095;</span>
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">Digital Deadstock V1 Tee</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$24.99</p>
+                        <a target="_blank" href="https://square.link/u/1fNUpHqx" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Buy now</a>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="product" data-images='["distro/initiation thermal.png"]'>
+                    <img src="distro/initiation thermal.png" alt="Initiation Thermal" class="product-image" style="width: 100%;">
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">Initiation Thermal</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$44.99</p>
+                        <a target="_blank" href="https://square.link/u/3ibt1sHv" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Buy now</a>
+                    </div>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
                 <div class="product" data-images='["distro/initiation sweater brown.png"]'>
                     <img src="distro/initiation sweater brown.png" alt="Initiation Sweater" class="product-image" style="width: 100%;">
                     <div style="padding: 20px;">
@@ -181,7 +269,7 @@
                         background-color: #3400ff;
                         text-align: center;
                         box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-                        border-radius: 50px;">Buy now</a>
+                        border-radius: 50px;">Sold Out</a>
                     </div>
                 </div>
             </td>
@@ -203,7 +291,7 @@
                         background-color: #3400ff;
                         text-align: center;
                         box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-                        border-radius: 50px;">Buy now</a>
+                        border-radius: 50px;">Sold Out</a>
                     </div>
                 </div>
             </td>
