--- a/distro.html
+++ b/distro.html
@@ -140,7 +140,7 @@
                         height: 48px;
                         color: #ffffff;
                         min-width: 212px;
-                        background-color: #3400ff;
+                        background-color: #FF0000;
                         text-align: center;
                         box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
                         border-radius: 50px;">Sold Out</a>
@@ -244,7 +244,7 @@
                         height: 48px;
                         color: #ffffff;
                         min-width: 212px;
-                        background-color: #3400ff;
+                        background-color: #FF0000;
                         text-align: center;
                         box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
                         border-radius: 50px;">Sold Out</a>
@@ -268,7 +268,7 @@
                         height: 48px;
                         color: #ffffff;
                         min-width: 212px;
-                        background-color: #3400ff;
+                        background-color: #FF0000;
                         text-align: center;
                         box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
                         border-radius: 50px;">Sold Out</a>
