--- a/distro.html
+++ b/distro.html
@@ -82,8 +82,8 @@
     <table>
         <tr>
             <td>
-                <div class="product" data-images='["distro/bogo salmon.png"]'>
-                    <img src="distro/bogo salmon.png" alt="OBTee" class="product-image" style="width: 100%;">
+                <div class="product" data-images='["distro/bogo salmon.png", "distro/ddv1 restock.png"]'>
+                    <img src="distro/bogo salmon.png" alt="Digital Deadstock V1 Tee" class="product-image" style="width: 100%;">
                     <span class="arrow left" onclick="prevImage(this)">&#10094;</span>
                     <span class="arrow right" onclick="nextImage(this)">&#10095;</span>
                     <div style="padding: 20px;">
