--- a/distro.html
+++ b/distro.html
@@ -86,14 +86,14 @@
     <table>
         <tr>
             <td>
-                <div class="product" data-images='["distro/bogo salmon.png", "distro/ddv1 restock.png"]'>
-                    <img src="distro/bogo salmon.png" alt="Digital Deadstock V1 Tee" class="product-image" style="width: 100%;">
+                <div class="product" data-images='["distro/subscribe.jpg"]'>
+                    <img src="distro/subscribe.jpg" alt="Subscribe Box Logo Tee" class="product-image" style="width: 100%;">
                     <span class="arrow left" onclick="prevImage(this)">&#10094;</span>
                     <span class="arrow right" onclick="nextImage(this)">&#10095;</span>
                     <div style="padding: 20px;">
-                        <p style="font-size: 18px; line-height: 20px;">Digital Deadstock V1 Tee</p>
-                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$24.99</p>
-                        <a target="_blank" href="https://square.link/u/1fNUpHqx" style="
+                        <p style="font-size: 18px; line-height: 20px;">Subscribe Box Logo Tee</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$44.00</p>
+                        <a target="_blank" href="https://square.link/u/UoGULPTa" style="
                         display: inline-block;
                         font-size: 18px;
                         line-height: 48px;
@@ -354,6 +354,28 @@
                         <p style="font-size: 18px; line-height: 20px;">It's Over/We're Back Shorts</p>
                         <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$29.99</p>
                         <a target="_blank" href="https://square.link/u/Oz6XvMpT" style="
+                        display: inline-block;
+                        font-size: 18px;
+                        line-height: 48px;
+                        height: 48px;
+                        color: #ffffff;
+                        min-width: 212px;
+                        background-color: #3400ff;
+                        text-align: center;
+                        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+                        border-radius: 50px;">Buy now</a>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="product" data-images='["distro/bogo salmon.png", "distro/ddv1 restock.png"]'>
+                    <img src="distro/bogo salmon.png" alt="Digital Deadstock V1 Tee" class="product-image" style="width: 100%;">
+                    <span class="arrow left" onclick="prevImage(this)">&#10094;</span>
+                    <span class="arrow right" onclick="nextImage(this)">&#10095;</span>
+                    <div style="padding: 20px;">
+                        <p style="font-size: 18px; line-height: 20px;">Digital Deadstock V1 Tee</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$24.99</p>
+                        <a target="_blank" href="https://square.link/u/1fNUpHqx" style="
                         display: inline-block;
                         font-size: 18px;
                         line-height: 48px;
